# qoi-control

./: CMakeLists.txt
include/: Log.hpp  Synthesizer4GE.hpp  Timer.hpp  qoi_utils.hpp
include/Reconstructor/: ComposedReconstructor.hpp  Reconstructor.hpp  SegmentedReconstructor.hpp
include/Refactor/: ComposedRefactor.hpp
include/SizeInterpreter/: GreedyBasedSizeInterpreter.hpp
parallel_src/: CMakeLists.txt  refactorNYX.cpp
qoi_cuda/: CMakeLists.txt  halfing_Vtot_cuda.cu
test/: CMakeLists.txt  halfing_C.cpp  halfing_C_sz3delta.cpp  halfing_Mach.cpp  halfing_Mach_sz3delta.cpp  halfing_PT.cpp  halfing_PT_sz3delta.cpp  halfing_T.cpp  halfing_T_sz3delta.cpp  halfing_Vtot.cpp  halfing_Vtot_NYX.cpp  halfing_Vtot_segmented.cpp  halfing_Vtot_sz3delta.cpp  halfing_mu.cpp  halfing_mu_sz3delta.cpp  refactor_data.cpp
